--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="login">Login</string>
     <string name="password">Password</string>
     <string name="full_name">Nama lengkap</string>
+    <string name="ic_home">Beranda</string>
+    <string name="ic_news">Berita</string>
+    <string name="ic_favorite">Favorite</string>
+    <string name="ic_profil">Profil</string>
 </resources>
